--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -36,8 +36,8 @@
             <tr>
                 <th scope="col">Ejercicio</th>
                 <th scope="col">Iteración</th>
-                <th scope="col">Comentarios</th>
-                <th scope="col">Guardar</th>
+                <th class="tableCenter" scope="col">Comentarios</th>
+                <th class="tableCenter" scope="col">Guardar</th>
             </tr>
             </thead>
 
@@ -83,12 +83,12 @@
                             </div>
                         </td>
 
-                        <td>
+                        <td class="tableCenter">
                             <textarea class="textarea" cols="30" rows="4" name="comment"><%= comment %></textarea>
                         </td>
 
-                        <td>
-                            <button type="submit" class="btn btn-primary waves-effect" name="idexercise"
+                        <td class="tableCenter">
+                            <button type="submit" class="btn btn-primary waves-effect save" name="idexercise"
                                     value="<%= module1[i]._id %>">Guardar Cambios
                             </button>
                             <br>
@@ -113,8 +113,8 @@
             <tr>
                 <th scope="col">Ejercicio</th>
                 <th scope="col">Iteración</th>
-                <th scope="col">Comentarios</th>
-                <th scope="col">Guardar</th>
+                <th class="tableCenter" scope="col">Comentarios</th>
+                <th class="tableCenter" scope="col">Guardar</th>
             </tr>
             </thead>
 
@@ -158,12 +158,12 @@
                             </div>
                         </td>
 
-                        <td>
+                        <td class="tableCenter">
                             <textarea class="textarea" cols="30" rows="4" name="comment"><%= comment %></textarea>
                         </td>
 
-                        <td>
-                            <button type="submit" class="btn btn-primary waves-effect" name="idexercise"
+                        <td class="tableCenter">
+                            <button type="submit" class="btn btn-primary waves-effect save" name="idexercise"
                                     value="<%= module2[i]._id %>">Guardar Cambios
                             </button>
                             <br>
@@ -188,8 +188,8 @@
             <tr>
                 <th scope="col">Ejercicio</th>
                 <th scope="col">Iteración</th>
-                <th scope="col">Comentarios</th>
-                <th scope="col">Guardar</th>
+                <th class="tableCenter" scope="col">Comentarios</th>
+                <th class="tableCenter" scope="col">Guardar</th>
             </tr>
             </thead>
 
@@ -233,12 +233,12 @@
                             </div>
                         </td>
 
-                        <td>
+                        <td class="tableCenter">
                             <textarea class="textarea" cols="30" rows="4" name="comment"><%= comment %></textarea>
                         </td>
 
-                        <td>
-                            <button type="submit" class="btn btn-primary waves-effect" name="idexercise"
+                        <td class="tableCenter">
+                            <button type="submit" class="btn btn-primary waves-effect save" name="idexercise"
                                     value="<%= module3[i]._id %>">Guardar Cambios
                             </button>
                             <br>
