--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -45,8 +45,8 @@
 
             <% var comment = ''; %>
             <% var iterations = ['off', 'off', 'off', 'off', 'off', 'off', 'off', 'off', 'off', 'off'] %>
-            <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Septima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
-            <% for( let i = 0; i < module1.length; i++ ) { %>
+            <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Septima', 'Octava', 'Novena', 'Decima']; %>
+            <% for( var i = 0; i < module1.length; i++ ) { %>
 
             <div class="form-group">
                 <!-- He cambiado la antigua ruta /mail/send , hay que dasle una vuelta -->
